<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddNewTask">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/rounded_contstraint"
        android:backgroundTint="#71876D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/task_edittext"
            android:layout_width="393dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/enter_task"
            android:paddingStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.063" />

        <TextView
            android:id="@+id/set_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawablePadding="8dp"
            android:text="@string/set_due_date"
            android:textColor="@color/Bg_green"
            android:textSize="16sp"
            app:drawableRightCompat="@drawable/baseline_calendar_month_24"
            app:layout_constraintEnd_toEndOf="@+id/task_edittext"
            app:layout_constraintHorizontal_bias="0.019"
            app:layout_constraintStart_toStartOf="@+id/task_edittext"
            app:layout_constraintTop_toBottomOf="@+id/task_edittext" />

        <Button
            android:id="@+id/Savebutton"
            android:layout_width="250dp"
            android:layout_height="53dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/Bg_green"
            android:text="@string/create_task"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/task_edittext"
            app:layout_constraintTop_toBottomOf="@+id/task_edittext" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>